--- a/src/main/resources/messages/validation/ValidationMessages.properties
+++ b/src/main/resources/messages/validation/ValidationMessages.properties
@@ -16,6 +16,7 @@ registration_name_is_not_valid= Please enter a valid name!
 registration_phone_number_is_not_valid=Please enter a valid phone number!
 registration_business_name_is_not_valid=Please enter a valid business name!
 registration_gst_in_is_not_valid=Please enter a valid GSTIN!
+registration_user_role_is_not_valid=Please select a valid role!
 
 # LOGIN VALIDATION
 login_username_not_empty=Username can not be null!
