--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,20 @@
         <version>2.7.10</version>
     </parent>
 
-    <groupId>com.farukgenc</groupId>
-    <artifactId>springboot-boilerplate</artifactId>
-    <version>2.2.0</version>
+    <groupId>com.application</groupId>
+    <artifactId>printEase</artifactId>
+    <version>1.0.0</version>
 
-    <name>spring-boot-boilerplate</name>
+    <name>printEase-application</name>
     <description>
-        Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(2.7.4), Spring Data JPA, Spring Validation, Spring Security +
-        JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger
+        printEase is a web application that allows users to upload their documents and print them at the nearest print shop.
     </description>
 
     <developers>
         <developer>
-            <name>Faruk Genc</name>
-            <email>omer@farukgenc.com</email>
-            <url>https://farukgenc.com</url>
+            <name>Harsha Vardhan Nimmala</name>
+            <email>harsha0770@gmail.com</email>
+            <url>https://github.com/N-Harsha/</url>
         </developer>
     </developers>
 
@@ -127,18 +126,13 @@
     </dependencies>
 
     <build>
-
-        <finalName>spring-boot-boilerplate</finalName>
-
+        <finalName>printEase</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
         </plugins>
-
     </build>
 
 </project>
