--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -1,2 +1,3 @@
 username_already_exists = This username is already being used!
 email_already_exists = This email address is already being used!
+service_does_not_exist = This service does not exist!
