order service initalized

--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -1,5 +1,5 @@
 username_already_exists = This username is already being used!
 email_already_exists = This email address is already being used!
 service_does_not_exist = This service does not exist!
-invalid_associated_service_configuration = The associated service configuration is invalid!
+associated_service_already_exists = adding associated service failed, because it already exists!
 associated_service_not_found = The associated service was not found!
