--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -3,3 +3,15 @@ email_already_exists = This email address is already being used!
 service_does_not_exist = This service does not exist!
 associated_service_already_exists = adding associated service failed, because it already exists!
 associated_service_not_found = The associated service was not found!
+user_not_found = The user was not found!
+customer_not_found = The customer was not found!
+service_provider_not_found = The service provider was not found!
+order_status_not_found = The order status with status {0} was not found!
+invalid_due_date = Due date cannot be before order creation date
+file_upload_error = File upload error
+orientation_not_found = Orientation not found
+paper_type_not_found = Paper type not found
+paper_size_not_found = Paper size not found
+print_side_not_found = Print side not found
+print_type_not_found = Print type not found
+binding_type_not_found = Binding type not found
