added the following - get end point of the orders - generation of the file download url - file download controller and service

--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -15,3 +15,8 @@ paper_size_not_found = Paper size not found
 print_side_not_found = Print side not found
 print_type_not_found = Print type not found
 binding_type_not_found = Binding type not found
+invalid_user_role = Invalid user role
+file_not_found = File with id : {0} was not found
+file_cannot_be_downloaded = File with id : {0} cannot be downloaded
+order_not_found = Order was not found
+download_not_authorized = You are not authorized to download file with id : {0}
