completed the order service

--- a/src/main/resources/messages/general/GeneralMessages.properties
+++ b/src/main/resources/messages/general/GeneralMessages.properties
@@ -3,3 +3,4 @@ associated_service_created_successfully = associated service created successfull
 associated_service_updated_successfully = associated service updated successfully!
 associated_service_deleted_successfully = associated service deleted successfully!
 order_created_successfully = order created successfully!
+order_status_updated = Order status updated successfully to {0} status!
