--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -20,3 +20,7 @@ file_not_found = File with id : {0} was not found
 file_cannot_be_downloaded = File with id : {0} cannot be downloaded
 order_not_found = Order was not found
 download_not_authorized = You are not authorized to download file with id : {0}
+user_not_authorized_for_status_update = You are not authorized to update order status
+order_cannot_be_cancelled = Order cannot be cancelled because it is already in {0} status
+order_status_cannot_be_updated = Order status cannot be updated 
+order_status_is_already_completed = Order can't be updated because it is already in Completed status
