updated the dto

--- a/src/main/resources/messages/general/GeneralMessages.properties
+++ b/src/main/resources/messages/general/GeneralMessages.properties
@@ -4,3 +4,5 @@ associated_service_updated_successfully = associated service updated successfull
 associated_service_deleted_successfully = associated service deleted successfully!
 order_created_successfully = order created successfully!
 order_status_updated = Order status updated successfully to {0} status!
+favorite_added_successfully = Service Provider with id : {0} added successfully to favorite list of customer with id : {1}!
+favorite_removed_successfully = Service Provider with id : {0} removed successfully from favorite list of customer with id : {1}!
