--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -24,3 +24,4 @@ user_not_authorized_for_status_update = You are not authorized to update order s
 order_cannot_be_cancelled = Order cannot be cancelled because it is already in {0} status
 order_status_cannot_be_updated = Order status cannot be updated 
 order_status_is_already_completed = Order can't be updated because it is already in Completed status
+favorite_already_added = Favorite already added
