file pages endpoint added

--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -25,3 +25,4 @@ order_cannot_be_cancelled = Order cannot be cancelled because it is already in {
 order_status_cannot_be_updated = Order status cannot be updated 
 order_status_is_already_completed = Order can't be updated because it is already in Completed status
 favorite_already_added = Favorite already added
+invalid_file_extension = Invalid file extension
