--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 
     <name>printEase-application</name>
     <description>
-        printEase is a web application that allows users to upload their documents and print them at the nearest print shop.
+        printEase is a web application that allows users to upload their documents and print them at the nearest print
+        shop.
     </description>
 
     <developers>
@@ -51,6 +52,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <!-- PDF -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.27</version>
+        </dependency>
+
+        <!-- PPT, DOC, DOCX, Excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
