--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -26,3 +26,4 @@ order_status_cannot_be_updated = Order status cannot be updated
 order_status_is_already_completed = Order can't be updated because it is already in Completed status
 favorite_already_added = Favorite already added
 invalid_file_extension = Invalid file extension
+rating_already_given = Rating for service provider with id : {0} has already been given
