--- a/src/main/resources/messages/general/GeneralMessages.properties
+++ b/src/main/resources/messages/general/GeneralMessages.properties
@@ -6,3 +6,4 @@ order_created_successfully = order created successfully!
 order_status_updated = Order status updated successfully to {0} status!
 favorite_added_successfully = Service Provider with id : {0} added successfully to favorite list of customer with id : {1}!
 favorite_removed_successfully = Service Provider with id : {0} removed successfully from favorite list of customer with id : {1}!
+rating_created_successfully = Rating created successfully!
