added the update and delete endpionts

--- a/src/main/resources/messages/general/GeneralMessages.properties
+++ b/src/main/resources/messages/general/GeneralMessages.properties
@@ -7,3 +7,5 @@ order_status_updated = Order status updated successfully to {0} status!
 favorite_added_successfully = Service Provider with id : {0} added successfully to favorite list of customer with id : {1}!
 favorite_removed_successfully = Service Provider with id : {0} removed successfully from favorite list of customer with id : {1}!
 rating_created_successfully = Rating created successfully!
+rating_updated_successfully = Rating updated successfully!
+rating_deleted_successfully = Rating deleted successfully!
