--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -27,3 +27,4 @@ order_status_is_already_completed = Order can't be updated because it is already
 favorite_already_added = Favorite already added
 invalid_file_extension = Invalid file extension
 rating_already_given = Rating for service provider with id : {0} has already been given
+rating_not_found = Rating for service provider with id : {0} was not found !
